--- a/ID_Studio_2/views/index2.ejs
+++ b/ID_Studio_2/views/index2.ejs
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-    <a href="/interiordesignstudio/inProjects"><button class="top-bttn">TOP</button></a>
+    <a href="/inProjects"><button class="top-bttn">TOP</button></a>
 
 
       <!-- ============ FOOTER ============ -->
