--- a/ID_Studio_2/views/mediterraneanStyle/index.ejs
+++ b/ID_Studio_2/views/mediterraneanStyle/index.ejs
@@ -4,7 +4,7 @@
   <%- include ('../partials/header.ejs') %>  
 
 <body>
-    <a class="link-styles" href="/interiordesignstudio/mediProjects">Back to Mediterranean Style</a>
+    <a class="link-styles" href="/mediProjects">Back to Mediterranean Style</a>
     <h1 class="index-title">Mediterranean Style Furniture</h1>
     
     <p  class="prodInf">Though not exhaustive, many Mediterranean-style homes will make use of the following design motifs: <br>
