--- a/ID_Studio_2/views/minimalistStyle/show.ejs
+++ b/ID_Studio_2/views/minimalistStyle/show.ejs
@@ -47,7 +47,7 @@
      </form> 
 </div>
 
-<a class="link-style" href="/interiordesignstudio/minProjects">Back to Minimalist Design Style</a>
+<a class="link-style" href="/minProjects">Back to Minimalist Design Style</a>
 
  <!-- ============ FOOTER ============ -->
     <%- include ('../partials/footer.ejs') %>
