--- a/ID_Studio_2/views/partials/footer.ejs
+++ b/ID_Studio_2/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <nav>
-        <a id="linkIn" href="/interiordesignstudio">Back to Interior Design Styles</a>
+        <a id="linkIn" href="/">Back to Interior Design Styles</a>
     </nav>
     
     <div class="footer-container">
