--- a/ID_Studio_2/views/index.ejs
+++ b/ID_Studio_2/views/index.ejs
@@ -14,7 +14,7 @@
 <div class="column">
     <div class="container">
     <p class="medText">For those who live in less sunny places and do not want to miss out on the serenity and that seaside feeling, bringing the Mediterranean look into their home is the perfect solution. The key is a mix of light colors, earth tones, and splashes of warm accents. Think white, beige, forest green, and terra-cotta complemented by ocher, orange, and azure blue</p>
-    <a href="/interiordesignstudio/mediProjects"><img src="https://media.architecturaldigest.com/photos/62e7d4efc767ddbc96686e83/master/w_960,c_limit/Mediterranean-JennaPeffley.jpeg" class="img1"></a>
+    <a href="/mediProjects"><img src="https://media.architecturaldigest.com/photos/62e7d4efc767ddbc96686e83/master/w_960,c_limit/Mediterranean-JennaPeffley.jpeg" class="img1"></a>
     <h2 id="styles">Mediterranean Style</h2>
 </div>
 </div>
@@ -22,7 +22,7 @@
 <div class="column">
     <div class="containerMin">
     <p class="minText">Spaces that fall within a minimalist design aesthetic are typically defined by clean lines, limited ornamentation, a neutral color scheme, and natural materials. And although this may be an accurate way to describe our contemporary understanding of minimalist house design, there is much more to it than just this.</p>
-    <a href="/interiordesignstudio/minProjects"><img src="https://margaritabravo.com/wp-content/uploads/2022/09/Open-Minimalist-LivingRoom-766x1024.jpeg" class="img2"></a>
+    <a href="/minProjects"><img src="https://margaritabravo.com/wp-content/uploads/2022/09/Open-Minimalist-LivingRoom-766x1024.jpeg" class="img2"></a>
     <h2 id="styles">Minimalist Style</h2>
     </div>
 
@@ -31,7 +31,7 @@
 <div class="column">
     <div class="containerIn">
     <p class="inText">A trend born out of necessity in the 1960s that still thrives today. Brick walls, pipes, and steel structures are left exposed to deliberately contribute to a dramatic effect</p>
-    <a href="/interiordesignstudio/inProjects"><img src="http://cdn.home-designing.com/wp-content/uploads/2018/06/vintage-industrial-bathroom.jpg" class="img3"></a>
+    <a href="/inProjects"><img src="http://cdn.home-designing.com/wp-content/uploads/2018/06/vintage-industrial-bathroom.jpg" class="img3"></a>
     <h2 id="styles">Industrial Style</h2>
 </div>
 </div>
