--- a/ID_Studio_2/views/industrialStyle/index.ejs
+++ b/ID_Studio_2/views/industrialStyle/index.ejs
@@ -3,7 +3,7 @@
   <!-- ============ HEADER ============ -->
   <%- include ('../partials/header.ejs') %>  
 
-  <a class="link-styles" href="/interiordesignstudio/inProjects">Back to Industrial Design Style</a>
+  <a class="link-styles" href="/inProjects">Back to Industrial Design Style</a>
 
 <body>
     
